--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   </header>
   <div class="contenido">
     <p>
-      <button class="btn btn-dark btn btn-secondary " type="submit"  style="background-color: rgb(255, 119, 119);">
+      <button class="btn btn-dark btn btn-secondary " type="submit" >
       <a href="dispositivo.html"
         target="_blank" style="color: black;">Ver dispositivo simulado.</a>
       </button>
     </p>
     <p>
-      <button class="btn btn-dark btn btn-secondary " type="submit"  style="background-color: rgb(255, 119, 119);" >
+      <button class="btn btn-dark btn btn-secondary " type="submit"  >
       <a href="historial.html"
         target="_blank" style="color: black;">Ver historial.</a>
       </button>
@@ -68,7 +68,7 @@
 <footer>
   <div>
     <strong>&copy; 2021
-      Marian Araceli Garcia Alvarado.</strong>
+      Curiel Barrera Dulce María.</strong>
   </div>
 </footer>
 <script src="js/script.js"></script>
