--- a/dispositivo.html
+++ b/dispositivo.html
@@ -23,7 +23,7 @@
   </header>
   <div class="contenido">
     <p>
-      <button class="btn btn-dark btn btn-secondary " type="submit"  style="background-color: rgb(255, 119, 119);" >
+      <button class="btn btn-dark btn btn-secondary " type="submit" >
       <a href="index.html"
         target="_blank"  style="color: black;">
         Ver móvil.</a>
@@ -67,7 +67,7 @@
   </div>
 <footer>
   <div>
-    <strong>&copy; 2021 Marian Araceli Garcia Alvarado.</strong>
+    <strong>&copy; 2021 Curiel Barrera Dulce María.</strong>
   </div>
 </footer>
 <script src="js/script.js"></script>
